--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/leaflet": "^1.9.21",
     "esri-leaflet": "^3.0.19",
     "leaflet": "^1.9.4",
+    "leaflet-geometryutil": "^0.10.3",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
