--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.21",
+    "csv-parse": "^6.1.0",
     "esri-leaflet": "^3.0.19",
     "leaflet": "^1.9.4",
     "leaflet-geometryutil": "^0.10.3",
